--- a/topografiya/templates/geodezis/head_komeral/komeral_works.html
+++ b/topografiya/templates/geodezis/head_komeral/komeral_works.html
@@ -17,7 +17,7 @@
                             <h3>Комерал назоратга келган ишлар</h3>
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="{% url 'index' %}">Бош саҳифа</a></li>
-                                <li class="breadcrumb-item active"><a href="{% url 'geodesiz_komeral_works' %}">Бош геодезис назоратига юборилган ишлар</a></li>
+                                <li class="breadcrumb-item active"><a href="{% url 'geodesiz_komeral_works' %}">Комерал назоратга келган ишлар</a></li>
                             </ol>
                         </div>
                     </div>
