--- a/topografiya/templates/leader/head_komeral/komeral_works.html
+++ b/topografiya/templates/leader/head_komeral/komeral_works.html
@@ -14,7 +14,7 @@
                 <div class="page-header">
                     <div class="row">
                         <div class="col-sm-6">
-                            <h3>Комерал назоратга келган ишлар</h3>
+                            <h3>Бош геодезис назоратига юборилган ишлар</h3>
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="{% url 'index' %}">Бош саҳифа</a></li>
                                 <li class="breadcrumb-item active"><a href="{% url 'leader_komeral_checking' %}">Бош геодезис назоратига юборилган ишлар</a></li>
