--- a/topografiya/templates/leader/komeral/checking_komeral_works.html
+++ b/topografiya/templates/leader/komeral/checking_komeral_works.html
@@ -508,9 +508,19 @@
                                         </li>
 
                                         <li class="file-box m-t-5">
+                                            <div class="file-top"><i class="fa fa-file-pdf-o f-36 txt-primary"></i>
+                                            </div>
+                                            <div class="file-bottom ">
+                                                <h6>7. Топографический план </h6>
+                                                <p>Ознакомиться с файлом отправки</p>
+                                                <button class="btn btn-primary w-100 m-t-10"><a href="/{{ workerobject.topo_plan }}" target="_blank" class="text-white">Кўриш</a></button>
+                                            </div>
+                                        </li>
+
+                                        <li class="file-box m-t-5">
                                             <div class="file-top"><i class="fa fa-file-pdf-o txt-primary"></i></div>
                                             <div class="file-bottom ">
-                                                <h6>7. Предписание </h6>
+                                                <h6>8. Предписание </h6>
                                                 <p>Ознакомиться с файлом отправки</p>
                                                 <button class="btn btn-primary w-100 m-t-10"><a href="#" target="_blank" class="file text-white" data-id="{{ workerobject.object.id }}">Кўриш</a></button>
                                             </div>
@@ -521,7 +531,7 @@
                                             <li class="file-box m-t-5">
                                                 <div class="file-top"><i class="fa fa-file-pdf-o txt-primary"></i></div>
                                                 <div class="file-bottom ">
-                                                    <h6>8. Топографик-геодезик дастури </h6>
+                                                    <h6>9. Топографик-геодезик дастури </h6>
                                                     <p>Ознакомиться с файлом отправки</p>
                                                     <button class="btn btn-primary w-100 m-t-10"><a href="#" id="doing_program_work_file" programwork-id="{{ programwork.id }}" class="text-white"> Кўриш</a></button>
                                                 </div>
@@ -533,7 +543,7 @@
                                         <li class="file-box m-t-5">
                                             <div class="file-top"><i class="fa fa-file-pdf-o txt-primary"></i></div>
                                             <div class="file-bottom ">
-                                                <h6>9. Пояснительная записка</h6>
+                                                <h6>10. Пояснительная записка</h6>
                                                 <p>Ознакомиться с файлом отправки</p>
                                                 <button class="btn btn-primary w-100 m-t-10"><a href="#" target="_blank" class="text-white" id="doing_poyasitelniy_file" object-id="{{ workerobject.object.id }}">Кўриш</a></button>
                                             </div>
@@ -542,7 +552,7 @@
                                         <li class="file-box m-t-5">
                                             <div class="file-top"><i class="fa fa-file-pdf-o txt-primary"></i></div>
                                             <div class="file-bottom ">
-                                                <h6>10. АКТ дала назорати текшируви</h6>
+                                                <h6>11. АКТ дала назорати текшируви</h6>
                                                 <p>Ознакомиться с файлом отправки</p>
                                                 <button class="btn btn-primary w-100 m-t-10"><a href="{% url 'show_akt_polevoy_worker' id=workerobject.object.id %}" class="text-white">Кўриш</a></button>
                                             </div>
@@ -552,7 +562,7 @@
                                         <li class="file-box m-t-5">
                                             <div class="file-top"><i class="fa fa-file-pdf-o txt-primary"></i></div>
                                             <div class="file-bottom ">
-                                                <h6>11. Akt komeral nazorati dalolatnomasi</h6>
+                                                <h6>12. Akt komeral nazorati dalolatnomasi</h6>
                                                 <p>Ознакомиться с файлом отправки</p>
                                                 <button class="btn btn-primary w-100 m-t-10"><a href="/{{ work.file }}" target="_blank" class="text-white">Кўриш</a></button>
                                             </div>
