--- a/topografiya/templates/leader/head_komeral/checking_komeral_works.html
+++ b/topografiya/templates/leader/head_komeral/checking_komeral_works.html
@@ -125,15 +125,22 @@
               <div class="modal-body">
                   <div class="row">
                       <div class="col-md-12">
-                            <ol>
-                                {% for work in rejects %}
-                                    <hr>
-                                       <li><a href="/{{ work.file }}"> Қайтариш сабаби аризаси</a></li>
-                                       <li>{{ work.reason }}</li>
-                                    <hr>
-                                {% endfor %}
+                           <ol>
 
-                            </ol>
+                                    {% for work in rejects %}
+                                        <li>
+                                            <ul>
+                                               <li class="p-1"><b class="text-primary">Қайтариш сабаби: </b> {{ work.reason }}</li>
+                                                <li class="p-1"><a href="/{{ work.rejected_file }}" target="_blank"><i class="fa fa-file-pdf-o"></i> Akt dalolatnomasi <b>{{ work.version }}</b></a></li>
+                                                {% if work.file %}
+                                                    <li class="p-1"><a href="/{{ work.file }}" target="_blank"><i class="fa fa-file-pdf-o"></i> Қайтариш сабаби иловаси</a></li>
+                                                {% endif %}
+                                            </ul>
+                                            <hr>
+                                        </li>
+                                    {% endfor %}
+
+                                </ol>
                       </div>
                   </div>
               </div>
@@ -160,6 +167,7 @@
                 </h4>
                 <div type="button" data-bs-dismiss="modal" aria-label="Close">X</div>
             </div>
+
             <div class="modal-body">
 
                        <div class="row text-end">
@@ -168,7 +176,7 @@
                                 <div class="col-lg-6 m-b-10">
                                     <div class="m-b-10">
                                         <div>Разрешение на залет от МО РУз</div>
-                                        <a href="/{{ siriefiles.file1_1 }}"> <i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                                        <a href="/{{ siriefiles.file1_1 }}" target="_blank"> <i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                                     </div>
                                 </div>
                         {% endif %}
@@ -176,7 +184,7 @@
                     <div class="col-lg-6 m-b-10">
                         <div class="m-b-10">
                             <div>Схема планирования залета БПЛА<sup style="color: red;">*</sup></div>
-                            <a  href="/{{ siriefiles.file1_2 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                            <a  href="/{{ siriefiles.file1_2 }}" target="_blank"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                         </div>
                     </div>
                             {% endif %}
@@ -184,7 +192,7 @@
                     <div class="col-lg-6 m-b-10">
                           <div class="m-b-10">
                             <div>Схема выполненных залетов<sup style="color: red;">*</sup></div>
-                            <a href="/{{ siriefiles.file1_3 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                            <a href="/{{ siriefiles.file1_3 }}" target="_blank"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                         </div>
                     </div>
                             {% endif %}
@@ -192,7 +200,7 @@
                     <div class="col-lg-6 m-b-10">
                         <div class='m-b-10'>
                             <div>Отчёт калибровки<sup style="color: red;">*</sup></div>
-                            <a href="/{{ siriefiles.file1_4 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                            <a href="/{{ siriefiles.file1_4 }}" target="_blank"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                         </div>
                     </div>
                             {% endif %}
@@ -200,7 +208,7 @@
                     <div class="col-lg-6 m-b-10">
                         <div class="m-b-10">
                             <div>Схема расположение опознаков и исходные пункты<sup style="color: red;">*</sup></div>
-                            <a href="/{{ siriefiles.file1_5 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                            <a href="/{{ siriefiles.file1_5 }}" target="_blank"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                         </div>
                     </div>
                             {% endif %}
@@ -208,7 +216,7 @@
                     <div class="col-lg-6 m-b-10">
                         <div class="m-b-10">
                             <div>Каталог координат исходных пунктов<sup style="color: red;">*</sup></div>
-                            <a href="/{{ siriefiles.file1_6 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                            <a href="/{{ siriefiles.file1_6 }}" target="_blank"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                         </div>
                     </div>
                             {% endif %}
@@ -224,7 +232,7 @@
                     <div class="col-lg-6 m-b-10">
                          <div class="m-b-10">
                             <div>Кроки  исходных пунктов<sup style="color: red;">*</sup></div>
-                            <a href="/{{ siriefiles.file1_8 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                            <a href="/{{ siriefiles.file1_8 }}" target="_blank"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                         </div>
                     </div>
                             {% endif %}
@@ -232,7 +240,7 @@
                     <div class="col-lg-6 m-b-10">
                          <div class="m-b-10">
                             <div>Отчёт обработки ортофотоплана<sup style="color: red;">*</sup></div>
-                            <a href="/{{ siriefiles.file1_9 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                            <a href="/{{ siriefiles.file1_9 }}" target="_blank"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                         </div>
                     </div>
                             {% endif %}
@@ -240,7 +248,7 @@
                     <div class="col-lg-6 m-b-10">
                         <div class="m-b-10">
                             <div>Измерения, скаченные с прибора(БПЛА)<sup style="color: red;">*</sup></div>
-                            <a href="/{{ siriefiles.file1_10 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                            <a href="/{{ siriefiles.file1_10 }}" target="_blank"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                         </div>
                     </div>
                             {% endif %}
@@ -248,7 +256,7 @@
                     <div class="col-lg-6 m-b-10">
                         <div class="m-b-10">
                             <div>Фото. опознаков<sup style="color: red;">*</sup></div>
-                            <a href="/{{ siriefiles.file1_11 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                            <a href="/{{ siriefiles.file1_11 }}" target="_blank"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                         </div>
                     </div>
                             {% endif %}
@@ -259,7 +267,7 @@
                          <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Каталог координат исходных пунктов</div>
-                                <a href="/{{ siriefiles.file2_1 }}"> <i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                                <a href="/{{ siriefiles.file2_1 }}" target="_blank"> <i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
                             {% endif %}
@@ -267,7 +275,7 @@
                         <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Каталог кооодинат долговременных точек <sup style="color: red;">*</sup></div>
-                                <a  href="/{{ siriefiles.file2_2 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                                <a  href="/{{ siriefiles.file2_2 }}" target="_blank"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
                             {% endif %}
@@ -275,7 +283,7 @@
                         <div class="col-lg-6 m-b-10">
                               <div class="m-b-10">
                                 <div>Ведомость обследование пунктов<sup style="color: red;">*</sup></div>
-                                <a href="/{{ siriefiles.file2_3 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                                <a href="/{{ siriefiles.file2_3 }}" target="_blank"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
                             {% endif %}
@@ -283,7 +291,7 @@
                         <div class="col-lg-6 m-b-10">
                             <div class='m-b-10'>
                                 <div>Отчёт калибровки<sup style="color: red;">*</sup></div>
-                                <a href="/{{ siriefiles.file2_4 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                                <a href="/{{ siriefiles.file2_4 }}" target="_blank"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
                             {% endif %}
@@ -291,7 +299,7 @@
                         <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Кроки  исходных пунктов<sup style="color: red;">*</sup></div>
-                                <a href="/{{ siriefiles.file2_5 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                                <a href="/{{ siriefiles.file2_5 }}" target="_blank"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
                             {% endif %}
@@ -299,7 +307,7 @@
                         <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Измерения, скаченные с прибора ( GNSS )<sup style="color: red;">*</sup></div>
-                                <a href="/{{ siriefiles.file2_6 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                                <a href="/{{ siriefiles.file2_6 }}" target="_blank"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
                             {% endif %}
@@ -307,7 +315,7 @@
                          <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Схема калибровки с границами объекта<sup style="color: red;">*</sup></div>
-                                <a href="/{{ siriefiles.file2_7 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                                <a href="/{{ siriefiles.file2_7 }}" target="_blank"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
                             {% endif %}
@@ -318,7 +326,7 @@
                          <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Ведомость обследования наличия и состояния пунктов геодезической сети на объекте</div>
-                                <a href="/{{ siriefiles.file3_1 }}"> <i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                                <a href="/{{ siriefiles.file3_1 }}" target="_blank"> <i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
                              {% endif %}
@@ -326,7 +334,7 @@
                         <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Каталог исходных пунктов и ранее заложенных точек <sup style="color: red;">*</sup></div>
-                                <a  href="/{{ siriefiles.file3_2 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                                <a  href="/{{ siriefiles.file3_2 }}" target="_blank"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
                              {% endif %}
@@ -334,7 +342,7 @@
                         <div class="col-lg-6 m-b-10">
                               <div class="m-b-10">
                                 <div>Схема съемочного обоснования<sup style="color: red;">*</sup></div>
-                                <a href="/{{ siriefiles.file3_3 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                                <a href="/{{ siriefiles.file3_3 }}" target="_blank"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
                              {% endif %}
@@ -342,7 +350,7 @@
                         <div class="col-lg-6 m-b-10">
                             <div class='m-b-10'>
                                 <div>Хурналы нивелирования теодолитных ходов<sup style="color: red;">*</sup></div>
-                                <a href="/{{ siriefiles.file3_4 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                                <a href="/{{ siriefiles.file3_4 }}" target="_blank"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
                              {% endif %}
@@ -350,7 +358,7 @@
                         <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Ведомость уравнивания теодолитных ходов и характеристики<sup style="color: red;">*</sup></div>
-                                <a href="/{{ siriefiles.file3_5 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                                <a href="/{{ siriefiles.file3_5 }}" target="_blank"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
                              {% endif %}
@@ -358,7 +366,7 @@
                         <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Ведомость нивелирных ходов и характеристики<sup style="color: red;">*</sup></div>
-                                <a href="/{{ siriefiles.file3_6 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                                <a href="/{{ siriefiles.file3_6 }}" target="_blank"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
                              {% endif %}
@@ -366,7 +374,7 @@
                         <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Схема уравнивания<sup style="color: red;">*</sup></div>
-                                <a href="/{{ siriefiles.file3_7 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                                <a href="/{{ siriefiles.file3_7 }}" target="_blank"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
                              {% endif %}
@@ -374,7 +382,7 @@
                         <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Схема размещения объекта по планшетам<sup style="color: red;">*</sup></div>
-                                <a href="/{{ siriefiles.file3_8 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                                <a href="/{{ siriefiles.file3_8 }}" target="_blank"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
                              {% endif %}
@@ -382,7 +390,7 @@
                         <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Каталог координат (пикеты)<sup style="color: red;">*</sup></div>
-                                <a href="/{{ siriefiles.file3_9 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                                <a href="/{{ siriefiles.file3_9 }}" target="_blank"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
                              {% endif %}
@@ -390,7 +398,7 @@
                         <div class="col-lg-6 m-b-10">
                             <div class="m-b-10">
                                 <div>Измерения, скаченные с прибора (тахеометра)<sup style="color: red;">*</sup></div>
-                                <a href="/{{ siriefiles.file3_10 }}"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
+                                <a href="/{{ siriefiles.file3_10 }}" target="_blank"><i class="fa fa-eye" aria-hidden="true"></i> Файлини кўриш</a>
                             </div>
                         </div>
                              {% endif %}
@@ -402,6 +410,7 @@
         </div>
     </div>
 </div>
+
 
 
 
